--- a/mobile.css
+++ b/mobile.css
@@ -1,6 +1,10 @@
 * {
 	border: 1px solid red;
 }
+img { 
+  max-width: 100%;
+  height: auto;
+}
 @media only screen and (max-width: 1150px){
 	#quicksearch { display:none; }
 
