--- a/mobile.css
+++ b/mobile.css
@@ -5,6 +5,7 @@ img {
   max-width: 100%;
   height: auto;
 }
+/*
 @media only screen and (max-width: 1150px){
 	#quicksearch { display:none; }
 
@@ -162,3 +163,4 @@ img {
 		width: 58%;
 	}
 }
+*/
